# stackMark

documents/: QUOTE_DETECTION_UPDATE.md  backend-internet-exposure.md  ec2-rds-deployment-guide.md  stackmark-development-journey.md  stackmark-ingestion-pipeline.md  stackmark-tags-idea.md  twitter-bot-setup-guide.md
stackmark-BE/: .gitignore  CLAUDE.md  CONTEXT.md  README.md  app.py  errors.py  pyproject.toml  router.py
stackmark-BE/alembic/: env.py
stackmark-BE/alembic/versions/: 02a36fdf1809_add_heading_and_brief_columns_to_.py  538ef27f7bd4_create_embeddings_table.py  90e94c9c5aa0_add_users_and_refresh_tokens_tables.py
stackmark-BE/auth/: create_user.py  dependencies.py  security.py
stackmark-BE/bruno-apis/stackMark/: authenticate.bru  bruno.json  health.bru  ingest.bru  refresh token.bru  search.bru
stackmark-BE/bruno-apis/stackMark/environments/: stackmark.bru
stackmark-BE/db/: operations.py  session.py
stackmark-BE/db/models/: __init__.py  embedding.py  refresh_token.py  user.py
stackmark-BE/instagram_pipeline/: CLAUDE.md  __main__.py  constants.py  fetcher.py  llm.py  media.py  messages.py  pipeline.py  prompts.py  trial.py
stackmark-BE/retrieval/: CLAUDE.md  constants.py  search.py
stackmark-BE/web_pipeline/: CLAUDE.md  __main__.py  constants.py  fetcher.py  llm.py  messages.py  pipeline.py  prompts.py
stackmark-BE/x_pipeline/: CLAUDE.md  constants.py  pipeline.py  prompts.py
stackmark-BE/youtube_pipeline/: CLAUDE.md  __main__.py  constants.py  fetcher.py  llm.py  messages.py  pipeline.py  prompts.py
stackmark-FE/: .gitignore  CLAUDE.md  (+3 more)
(+29 files in other folders)
