[project]
name = "stackmark-pipeline"
version = "0.1.0"
description = "StackMark — Barebone ingestion pipeline prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "openai>=2.29.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg>=3.3.3",
    "pgvector>=0.4.2",
    "instaloader>=4.15.1",
]

[project.scripts]
stackmark = "x_pipeline.pipeline:main"
