[project]
name = "stackmark-pipeline"
version = "0.1.0"
description = "StackMark — Barebone ingestion pipeline prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "openai>=2.29.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg>=3.3.3",
    "pgvector>=0.4.2",
    "instaloader>=4.15.1",
    "yt-dlp>=2024.1.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
stackmark = "x_pipeline.pipeline:main"
create_user = "auth.create_user:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "auth",
    "db",
    "x_pipeline",
    "instagram_pipeline",
    "youtube_pipeline",
    "web_pipeline",
    "retrieval",
]
